# DataHarvest

./: .gitignore  LICENSE  Makefile  README.es.md  README.md  WIKI.md  docker-compose.yml
backend/: Dockerfile  env.example  pyproject.toml  requirements-fixed.txt  requirements.txt  run.py  setup.py  worker.py
backend/app/: __init__.py
backend/app/analytics/: analytics_core.c  analytics_core.html  analytics_core.pyx
backend/app/analytics/engines/: analytics_engine.py
backend/app/api/: ai.py  analytics.py  auth.py  exports.py  health.py  monitor.py  pipelines.py  scraper.py  tables.py
backend/app/core/: celery_app.py  config.py  database.py  socket_events.py
backend/app/middleware/: auth.py
backend/app/schemas/: requests.py
backend/app/scrapers/: scraper_core.c  scraper_core.html  scraper_core.pyx
backend/app/scrapers/engines/: scraper_engine.py
backend/app/tasks/: ai_tasks.py  analytics_tasks.py  export_tasks.py  monitor_tasks.py  pipeline_tasks.py  scraper_tasks.py
backend/app/utils/: helpers.py  parser_core.c  parser_core.html  parser_core.pyx
frontend/: .cta.json  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: styles.css
frontend/src/components/: Onboarding.tsx  ThemeToggle.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AIStudioPage.tsx  AboutPage.tsx  AnalyticsPage.tsx  DashboardPage.tsx  DataTablesPage.tsx  MonitorPage.tsx  PipelinesPage.tsx  ReportsPage.tsx  ScraperPage.tsx  SettingsPage.tsx  index.ts
frontend/src/routes/: __root.tsx  index.tsx
(+11 files in other folders)
